2010-12-15 Malignant Manor <malignantmanor@users.sourceforge.net>
	*cheat.cc: heal_party now cures charmed, paralysis, and cursed flags. It also resets
		temperature but does not remove the freezing flag.

2010-12-14 Malignant Manor <malignantmanor@users.sourceforge.net>
	*combat.cc: Added check to make sure that party members do not target themselves unless
		in tournament mode. Bugs 3053811 and 2797068 should be fixed now.

2010-12-14 Malignant Manor <malignantmanor@users.sourceforge.net>
	*combat.cc: Added checks for charmed party members in Combat_schedule::find_opponents.

2010-12-13 Malignant Manor <malignantmanor@users.sourceforge.net>
	*combat.cc: Added check in Combat_schedule::find_opponents to make party members be
		attacked while sleeping if there are no other viable targets. Fixes bug # 2961387.

2010-12-13 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: Added missing check for stove in find_leftovers.
	*schedule.*: added comments
	*svn:ignore: added exconfig.dll to the trunk's ignore list

2010-12-12 Malignant Manor <malignantmanor@users.sourceforge.net>
	*conf/Configuration.cc: Prevent wrong error messages about moving and copying the
		configuration file in Windows if home is the Exult folder.

2010-12-12 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: A check was added for the ending of some schedules. Every hour the ending
		is called and this check will prevent some erratic behavior.

2010-12-12 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: Improved Automaton baking in Silver Seed.
		display_wares cost changed in SI (needed for Automaton).

2010-12-12 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: The Moonshade Baker now displays goods. Removed accidental temporary flag.
		gamemgr\sigame.cc: Map patches were added to remove	the bread, dough, and flour in
		Moonshade that are on the wrong tables. Dev games are now excluded from	all the SI
		map patches.
